test/libsolidity/syntaxTests/nameAndTypeResolution/557_no_address_members_on_contract_callcode_v050.sol
pragma experimental "v0.5.0";
contract C {
    function f() public {
        this.callcode;
    }
}
// ----
// TypeError: (77-90): Member "callcode" not found or not visible after argument-dependent lookup in contract C.
